# letterboxd-recs

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
notebooks/: exploration.ipynb
scripts/: build_film_db.py  recommend.py  run_recommendations.py
src/ingestion/: csv_loader.py  scraper.py  tmdb_client.py
src/models/: collaborative.py  content_based.py  evaluation.py  features.py  hybrid.py  neural.py  taste.py
