[project]
name = "letterboxd-recs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "lxml>=6.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "scikit-surprise>=1.1.5",
    "scipy>=1.17.1",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "uvicorn>=0.49.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
